--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
+    "react-spinners": "^0.17.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
